network-policies/calico/test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-ingress
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
